--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Learn to Cook Mouth-Watering African Cuisine!</h1>
-<h3>Arit Amana (African Chef)</h3>
+<div class="hero">
+  <div class="frosty col-10 offset-1 text-center">
+    <h1>Learn to Cook the Most DELICIOUS Cuisine!</h1>
+    <h3><em>-- Atim Udoh (Global Chef)</em></h3>
+    <br />
+    <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+  </div>
+</div>
