--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LearnStream</title>
+    <title>Now You Cook!</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -15,17 +15,17 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <%= link_to 'LearnStream', root_path, class: 'logofont' %>
+      <%= link_to 'NowYouCook!', root_path, class: 'logofont' %>
 
       <div class="collapse navbar-collapse right-align" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-          <li class="nav-item">
+          <li class="nav-link">
             <%= link_to 'See all Courses', '#' %>
           </li>
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item">
-            Log In
+          <li class="nav-link">
+            <%= link_to 'Log In', '#' %>
           </li>
         </ul>
       </div>
