--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+  background-image: url('cream_dust.png');
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -46,4 +47,9 @@ a:hover {
 
 .btn {
   border-radius: 0;
+}
+
+.feature {
+  width: 100%;
+  padding: 0 5%;
 }
