--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,3 +6,20 @@
     <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
   </div>
 </div>
+
+ <div class="row text-center feature">
+    <div class="col-12 col-sm">
+      <h3>Easy-to-Follow Videos</h3>
+      <p>Learn to cook at your own pace from world-reknowned chefs at the top of their game!</p>
+    </div>
+
+    <div class="col-12 col-sm">
+      <h3>Make-It-Your-Own Recipes</h3>
+      <p>Each video includes techniques to subtly modify the meal's taste profile, resulting in almost limitless variations!</p>
+    </div>
+
+    <div class="col-12 col-sm">
+      <h3>Yours Forever</h3>
+      <p>Once purchased, your videos are yours to keep and rewatch any time you desire.</p>
+    </div>
+  </div>
