--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -40,7 +40,7 @@ a:hover {
   color: white;
   padding: 20px 0 20px 0;
   position: absolute;
-  margin-top: 50px;
+  margin-top: 10%;
   border: 2px black solid;
   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
 }
@@ -52,4 +52,22 @@ a:hover {
 .feature {
   width: 100%;
   padding: 0 5%;
+}
+
+p.alert {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+}
+
+.booyah-box {
+  -webkit-box-shadow:1px 1px 2px 0 #d0d0d0;
+  -moz-box-shadow:1px 1px 2px 0 #d0d0d0;
+  box-shadow:1px 1px 2px 0 #d0d0d0;
+  background:#fff;
+  border:1px solid #ccc;
+  border-color:#e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding: 20px;
 }
