--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,17 @@
           </li>
         </ul>
         <ul class="navbar-nav">
+          <% if user_signed_in? %>
           <li class="nav-link">
-            <%= link_to 'Log In', '#' %>
-          </li>
+            <%= link_to 'Edit Profile', edit_user_registration_path %></li>
+            <li class="nav-link">
+            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+            <% else %>
+          <li class="nav-link">
+            <%= link_to 'Register', new_user_registration_path %> </li>
+            <li class="nav-link">
+              <%= link_to 'Log In', new_user_session_path %></li>
+          <% end %>
         </ul>
       </div>
     </nav>
