--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="hero">
   <div class="frosty col-10 offset-1 text-center">
-    <h1>Learn to Cook the Most DELICIOUS Cuisine!</h1>
+    <h1>Learn to Cook the Most DELICIOUS Food!</h1>
     <h3><em>-- Atim Udoh (Global Chef)</em></h3>
     <br />
     <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
@@ -10,7 +10,7 @@
  <div class="row text-center feature">
     <div class="col-12 col-sm">
       <h3>Easy-to-Follow Videos</h3>
-      <p>Learn to cook at your own pace from world-reknowned chefs at the top of their game!</p>
+      <p>Learn to cook at your own pace from world-renowned chefs at the top of their game!</p>
     </div>
 
     <div class="col-12 col-sm">
