--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,19 +55,20 @@
       <div class="row text-center footer-cont">
         
         <div class="col-12 col-sm">
-          <h5>Instructors</h5>
+          <h4>Instructors</h4>
+          <%= link_to 'Teach A Course', new_instructor_course_path %>
           </div>
 
           <div class="col-12 col-sm">
-          <h5>About</h5>
+          <h4>About</h4>
           </div>
 
           <div class="col-12 col-sm">
-          <h5>Contact</h5>
+          <h4>Contact</h4>
           </div>
 
           <div class="col-12 col-sm">
-          <h5>Social</h5>
+          <h4>Social</h4>
           </div>
         
         </div>
