Listing out the Courses

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse right-align" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-md-0">
             <li class="nav-link">
-              <%= link_to 'See all Courses', '#' %>
+              <%= link_to 'See all Courses', courses_path, class: 'nav-link' %>
             </li>
           </ul>
           <ul class="navbar-nav">
