--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,7 @@
     <h1>Learn to Cook the Most DELICIOUS Food!</h1>
     <h3><em>-- Atim Udoh (Global Chef)</em></h3>
     <br />
-    <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+    <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
   </div>
 </div>
 
