--- a/app/views/instructor/sections/new.html.erb
+++ b/app/views/instructor/sections/new.html.erb
@@ -1,6 +1,6 @@
 <div class="booyah-box col-10 offset-1">
   <h1>Add A New Section</h1>
-    <%= simple_form_for @section, url: instructor_course_sections_path(@course) do |f| %>
+    <%= simple_form_for @section, url: instructor_course_sections_path(current_course) do |f| %>
       <%= f.input :title %>
       <br />
       <%= f.submit "Add Section", class: 'btn btn-primary' %>
