--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,9 @@
 <div class="booyah-box col-10 offset-1">
   <h1><%= @course.title %></h1>
+  
+  <% if @course.image.present? %>
+  <%= image_tag @course.image, class: 'img-fluid' %>
+  <% end %>
   <br />
     
     <div class="row">
