--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,28 +1,47 @@
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
+
   <br />
-  <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning float-right' %>
-  <br class="clr" />
-    <div class="text-center">
-      <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
+
+  <div class="row">
+    <div class="col-sm-3 col-12">
+      <% if current_course.image.present? %>
+        <%= image_tag current_course.image, class: 'img-fluid' %>
+      <% end %>
+    </div>
+    
+    <div class="col-sm-9 col-12">
+      <%= link_to 'Preview As Student', course_path(current_course), class: 'btn btn-warning float-right' %>
+    
+    <br class="clr" />
+    
+    <div>
+      <%= link_to 'Add New Section', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
+      <br /><br />
     </div>
 
     <ul>
-      <% current_course.sections.each do |section| %>
+    <% current_course.sections.each do |section| %>
       <li>
         <%= section.title %>
-        <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
-          <ul>
-              <% section.lessons.each do |lesson| %>
-              <li>
-              <strong><%= lesson.title %></strong>
-              -
-              <%= lesson.subtitle %>
-              </li>
-              <% end %> 
-          </ul>
+        <%= link_to 'Add New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
+        
+        <ul>
+          <% section.lessons.each do |lesson| %>
+            <li>
+            <strong><%= lesson.title %></strong>
+            -
+            <%= lesson.subtitle %>
+            </li>
+          <% end %> 
+        </ul>
+        
         <br class="clr" />
+      
       </li>
-      <% end %>
+    <% end %>
     </ul>
+
+    </div>
+  </div>
 </div>
