--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -3,6 +3,8 @@
     <%= simple_form_for @lesson, url: instructor_section_lessons_path(current_section) do |f| %>
     <%= f.input :title %>
     <%= f.input :subtitle %>
+    <%= f.label 'Attach Video File' %>
+    <%= f.input :video %>
     <br />
     <%= f.submit "Add Lesson", class: 'btn btn-primary' %>
     <br />
