Configure Video Embedding

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,10 +1,22 @@
-<div class="booyah-box col-10 offset-1">
+<div class="booyah-box col-10 offset-1 text-center">
   <h1><%= current_lesson.title %></h1>
 
   <p>
     <%= current_lesson.subtitle %>
   </p>
 
-  <%= link_to 'Video', current_lesson.video.to_s %>
+    <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto"
+    poster="<%= image_path('egusi_soup.jpg') %>" data-setup="{}">
+      
+      <source src="<%= current_lesson.video.to_s %>" type='video/mp4'>
+      
+      <noscript>
+      <p class="vjs-no-js">
+        To view this video please enable JavaScript, and consider upgrading to a web browser that
+        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+      </p>
+      </noscript>
+    
+    </video>
   
 </div>
