Configure Student Enrollment

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -21,6 +21,12 @@
         <br /><br /> 
         <p><%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %></p>
         <% end %>
+
+        <% if current_user && current_user.enrolled_in?(@course) %>
+          <h3 class="badge badge-info">You Are Enrolled!</h3>
+        <% else %>
+        <%= link_to 'Enroll Now', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+        <% end %>
       </div>
       
       <div class="col-sm-10 col-12 float-right">
