Allowing users to re-order lessons (Drag & Drop)

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,6 +1,21 @@
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
 
+  <script>
+    $(function() {
+      $('.lessons').sortable({
+        update: function(event,ui) {
+          $.ajax({
+            type: 'PUT',
+            url: ui.item.data('update-url'),
+            dataType: 'json',
+            data: { lesson: { row_order_position: ui.item.index() }}
+          });
+        }
+      });
+    });
+  </script>
+
   <br />
 
   <div class="row">
@@ -26,9 +41,9 @@
         <%= section.title %>
         <%= link_to 'Add New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
         
-        <ul>
+        <ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
-            <li>
+            <li data-update-url="<%= instructor_lesson_path(lesson) %>">
             <strong><%= lesson.title %></strong>
             -
             <%= lesson.subtitle %>
