Made JQuery CDN links secure (https, not http)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Now You Cook!</title>
 
-     <link href="http://vjs.zencdn.net/6.6.3/video-js.css" rel="stylesheet">
+     <link href="https://vjs.zencdn.net/6.6.3/video-js.css" rel="stylesheet">
 
     <%= csrf_meta_tags %>
 
@@ -79,7 +79,7 @@
   </div>
 
 
-    <script src="http://vjs.zencdn.net/6.6.3/video.js"></script>
-    <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+    <script src="https://vjs.zencdn.net/6.6.3/video.js"></script>
+    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
   </body>
 </html>
