Make Sections Sortable

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -50,7 +50,7 @@
       </div>
       
       <div class="col-12">
-        <% @course.sections.each do |section| %>
+        <% @course.sections.rank(:row_order).each do |section| %>
         <br /><br />
           <div class="section">
           <h3>
