--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -52,8 +52,10 @@
     <br class="clr" />
     
     <div>
-      <%= link_to 'Add New Section', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
-      <br /><br />
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
+        Add New Section
+      </button>
     </div>
 
     <ul class="sections">
@@ -99,4 +101,30 @@
 
   </div>
   </div>
+
+<!-- Modal -->
+<div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="newSectionModalLabel">Add New Section</h4>
+      </div>
+
+        <%= simple_form_for @section, url: instructor_course_sections_path(current_course) do |f| %>
+          <div class="modal-body">
+            <%= f.input :title %>
+          </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= f.submit "Add Section", class: 'btn btn-primary' %>
+      </div>
+        <% end %>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+    </div>
+  </div>
+</div>
+
 </div>
