Add Privacy Policy Page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
           <br />
           <%= link_to 'Careers', '#' %>
           <br />
-          <%= link_to 'Privacy Policy', '#' %>
+          <%= link_to 'Privacy Policy', privacy_path %>
           </div>
 
           <div class="col-12 col-sm">
