--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,6 +5,8 @@
   <%= f.error_notification %>
 <br />
   <div class="form-inputs">
+    <%= f.input :fullname, required: true %>
+    <%= f.input :username, required: true %>
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
